<resources>
    <string name="app_name">SelfiesApp</string>

    <string name="login_signin_button_text">Let\'s go!</string>
    <string name="login_password_hint_text">Password comes here</string>
    <string name="login_password_helper_text">Just your pass authenticates yourself, so, please, do not forget it!</string>
    <string name="login_username_hint_text">Please, fill with your username</string>
    <string name="login_username_helper_text">Your e-mail address goes here</string>
    <string name="login_welcome_title_label">Yours Selfies warehouse!</string>
    <string name="login_username_input_textfield_error">Invalid Username</string>

    <string name="gallery_no_pictures_label">You have no pictures yet :(</string>
    <string name="gallery_first_picture_label">Take your first one!</string>
    <string name="gallery_another_picture_label">Let\'s add more pictures!</string>
    <string name="gallery_pictures_could_not_retrieved">Pictures could not be retrieve</string>

    <string name="camera_upload_successful">Successfully uploaded :D</string>
    <string name="camera_permissions_not_granted">Permissions not granted by the user.</string>
    <string name="camera_take_picture_button_label">¡Cheers!</string>

    <string name="create_album_title_label">Woohoo, a new album is coming! </string>
    <string name="create_album_title_hint_text">Please, give a title for your new Album!</string>
    <string name="create_album_description_hint_text">Awesome if you give a brief description of it</string>
    <string name="create_album_button_label">Lets create it!</string>

    <string name="picture_metadata_title_label">Before uploading this precious picture,\n You could add some info related to it! </string>
    <string name="picture_metadata_name_hint_label">Does it has a name?</string>
    <string name="picture_metadata_title_hint_label">A title to easily remember this moment</string>
    <string name="picture_metadata_description_hint_label">A brief description always helps …</string>
    <string name="picture_metadata_upload_button_label">Ready, gogogo!</string>
</resources>
