<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_48"
    android:paddingBottom="@dimen/margin_48"
    android:paddingEnd="@dimen/margin_8"
    android:paddingStart="@dimen/margin_8"
    tools:context=".login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/margin_56"
        android:layout_height="@dimen/margin_56"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_welcome_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/login_welcome_title_label"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_username_input_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_48"
        android:hint="@string/login_username_hint_text"
        android:textSize="@dimen/text_size_20"
        app:errorEnabled="false"
        app:errorTextColor="@color/colorPrimary"
        app:helperText="@string/login_username_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcome_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_56"
        android:layout_marginBottom="@dimen/margin_8"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_signin_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>